fixed all spacing with percents

--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,7 @@ body{
 
 .navbar,
 h1,
+h4,
 h5
 {
 	font-family:'Oswald', sans-serif;
@@ -64,11 +65,13 @@ h3{
 	line-height:1.7em;
 }
 
-h4{}
+h4{
+	color:#666;
+	font-size:2em;
+}
 
 h5{
 	font-weight: 400;
-	font-size: 60px;
 }
 
 p{
@@ -91,9 +94,12 @@ a:hover{
 .navbar{
 	background-color: #000015;
 	height: 70px;
-	padding: 0 50px;
 	text-transform: uppercase;
 	font-weight:300;
+}
+
+.navbar-header{
+	padding-left:15px;
 }
 
 .navbar-brand{
@@ -101,6 +107,10 @@ a:hover{
 	font-weight:400;
 	letter-spacing: .05em;
 	padding:.8em 0;
+}
+
+.navbar-nav{
+	background:#000;
 }
 
 .navbar-nav>li>a{
@@ -132,7 +142,7 @@ a:hover{
 }
 
 .navbar-toggle.collapsed .icon-bar{
-	background:#fff;
+  background:#fff;
 }
 
 .navbar-toggle .icon-bar{
@@ -208,13 +218,13 @@ a:hover{
 }
 
 .hovertext h5{
+	font-size:4em;
 	display:table-cell;
 	vertical-align: middle;
 }
 
 #portfolio ul li:hover .hovertext{
 	opacity: 1;
-
 }
 
 #portfolio ul li img{
@@ -256,7 +266,8 @@ Gallery Page
 ----------*/
 .bx-wrapper{
 	width:80%;
-	height:80%;
+	height:70%;
+	margin:1em auto;
 }
 
 .imageGallery{
@@ -271,42 +282,77 @@ Gallery Page
 	left:0;
 	right:0;
 	max-width:100%;
-	max-height:100%;
+	max-height:80%;
 	margin:auto;
 }
 
-.bx-prev{
-	left:-50px;
+.imageGallery figure{
+	height:100%;
 }
 
-.bx-next{
-	right:50px;
+.imageGallery figcaption{
+	position:absolute;
+	bottom:0;
+	height:10%;
+	width:100%;
+	color:#fff;
+}
+
+.bx-wrapper .bx-prev{
+	left:-12%;
+}
+
+.bx-wrapper .bx-next{
+	right:-12%;
+}
+
+@media screen and (min-width:768px){
+	.bx-wrapper .bx-prev{
+		left:-5%;
+	}
+	.bx-wrapper .bx-next{
+		right:-5%;
+	}
+}
+
+.thumbContainer{
+	height:15%;
+	width:100%;
+	position:fixed;
+	bottom:0;
+	overflow-x:scroll;
 }
 
 .thumbnails{
-	text-align:center;
+	height:100%;
 }
 
 .thumbnails li{
-	display:inline-block;
-	margin: 1em 1em 0 0;
+	height:100%;
+	display:block;
+	float:left;
+	margin: 0;
 }
 
 .thumbnails li a{
-	height:8em;
-	width:8em;
+	height:100%;
+	max-height:8em;
+	max-width:8em;
 	display:block;
 	overflow:hidden;
-	border: 1em solid #333;
+	border: 3px solid #333;
 	background: #333;
+	text-align: center;
+	vertical-align: middle;
 }
 
 .thumbnails .active{
-	border:1em solid #fff;
+	border: 3px solid #fff;
 	background: #fff;
 }
 
 .thumbnails img{
 	max-width:150%;
 	max-height:150%;
+	vertical-align: middle;
 }
